add support for event2json/json2event